# driver-monitor

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  IMGUI_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  config.json
src/: Application.cpp  Application.h  main.cpp
src/core/: Config.cpp  Config.h  DriverMonitor.cpp  DriverMonitor.h  EventManager.cpp  EventManager.h  Utils.cpp  Utils.h
src/gui/: DetailsPanel.cpp  DetailsPanel.h  EventLogPanel.cpp  EventLogPanel.h  MainWindow.cpp  MainWindow.h  SettingsPanel.cpp  SettingsPanel.h  StatisticsPanel.cpp  StatisticsPanel.h
src/monitoring/: ETWConsumer.cpp  ETWConsumer.h  FileSystemMonitor.cpp  FileSystemMonitor.h  RegistryMonitor.cpp  RegistryMonitor.h  WMIMonitor.cpp  WMIMonitor.h
